compiler/tests/should-fail/TypeMismatch4.via
/* TypeMismatchError */

host alice : {A}
host bob : {B}

fun main() {
    val x: int@Local(host = {alice, bob}) = 0;
}
